werf/chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  labels:
    app: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
